tests/rustdoc-ui/issues/issue-105737.stderr
error[E0747]: constant provided when a type was expected
  --> $DIR/issue-105737.rs:1:10
   |
LL | impl Vec<lol> {}
   |          ^^^
   |
   = help: `lol` is a function item, not a type
   = help: function item types cannot be named directly

error: aborting due to previous error

For more information about this error, try `rustc --explain E0747`.
