tests/rustdoc-ui/issues/issue-105737.rs
impl Vec<lol> {}
//~^ ERROR

pub fn lol() {}
